--- a/src/Components/Helper/Loading/Loading.module.css
+++ b/src/Components/Helper/Loading/Loading.module.css
@@ -1,7 +1,10 @@
 .wrapper {
   position: absolute;
   width: 100vw;
+  height: 100vh;
   display: flex;
+  justify-content: center;
+  align-items: center;
   top: 0;
   left: 0;
   z-index: 1001;
