logica para recuperar senha

--- a/src/Components/Photo/PhotoComments/PhotoComments.module.css
+++ b/src/Components/Photo/PhotoComments/PhotoComments.module.css
@@ -4,7 +4,9 @@
   padding: 0 2rem;
   max-height: 34vh;
 }
-
+.single.comments {
+  padding: 0px;
+}
 .comments li {
   margin-bottom: 0.5rem;
   line-height: 1.2;
